タッブタップスクロールのバグ修正

--- a/looplist/ja.lproj/Main_iPhone.storyboard
+++ b/looplist/ja.lproj/Main_iPhone.storyboard
@@ -29,10 +29,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
-                            <tableViewSection headerTitle="リスト" id="gEa-yG-bHg">
+                            <tableViewSection id="gEa-yG-bHg">
                                 <cells>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="sSO-bL-2hk" detailTextLabel="a4u-m4-w8e" style="IBUITableViewCellStyleValue1" id="p1m-KY-Czx">
-                                        <rect key="frame" x="0.0" y="119" width="320" height="44"/>
+                                        <rect key="frame" x="0.0" y="99" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="p1m-KY-Czx" id="tP1-vQ-s8g">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -57,7 +57,11 @@
                                             <segue destination="5bE-iw-b9Q" kind="push" identifier="CheckListManageSegue" id="lHF-8Z-1Ek"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="aPb-mp-A2z" detailTextLabel="AoI-yN-Ua5" style="IBUITableViewCellStyleValue1" id="2hx-Dl-0NY">
+                                </cells>
+                            </tableViewSection>
+                            <tableViewSection id="hNb-pF-gPs">
+                                <cells>
+                                    <tableViewCell hidden="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="aPb-mp-A2z" detailTextLabel="AoI-yN-Ua5" style="IBUITableViewCellStyleValue1" id="2hx-Dl-0NY">
                                         <rect key="frame" x="0.0" y="163" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="2hx-Dl-0NY" id="VS5-IB-fXF">
@@ -86,10 +90,10 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="iCloud" id="hNb-pF-gPs">
+                            <tableViewSection id="0Tk-nu-vcD">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="LfS-Ql-xwQ" detailTextLabel="crW-Ws-Yv8" style="IBUITableViewCellStyleValue1" id="faE-YR-0Ub">
-                                        <rect key="frame" x="0.0" y="255" width="320" height="44"/>
+                                    <tableViewCell hidden="YES" contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="LfS-Ql-xwQ" detailTextLabel="crW-Ws-Yv8" style="IBUITableViewCellStyleValue1" id="faE-YR-0Ub">
+                                        <rect key="frame" x="0.0" y="227" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="faE-YR-0Ub" id="eVg-et-kcd">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
@@ -117,33 +121,33 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="購入" id="0Tk-nu-vcD">
+                            <tableViewSection headerTitle="購入" id="8dD-lX-zxK">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="KDK-3c-ob1" detailTextLabel="aQ1-ur-cuW" style="IBUITableViewCellStyleValue1" id="E3e-E7-5wJ">
-                                        <rect key="frame" x="0.0" y="347" width="320" height="44"/>
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="zxV-6D-ypp" detailTextLabel="uK2-fB-Qxe" style="IBUITableViewCellStyleValue1" id="7H6-LL-uw5">
+                                        <rect key="frame" x="0.0" y="319" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="E3e-E7-5wJ" id="TYD-0J-T3f">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="7H6-LL-uw5" id="KM3-b7-Uwi">
                                             <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Pro版にアップグレード" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="KDK-3c-ob1">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Pro版にアップグレード" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="zxV-6D-ypp">
                                                     <rect key="frame" x="15" y="11" width="178" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="aQ1-ur-cuW">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="uK2-fB-Qxe">
                                                     <rect key="frame" x="241" y="11" width="44" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="JRT-XW-oup" kind="push" identifier="InAppPurchaseSegue" id="SZA-AW-5cK"/>
+                                            <segue destination="JRT-XW-oup" kind="push" identifier="InAppPurchaseSegue" id="50P-38-q9S"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -161,7 +165,7 @@
                         <outlet property="checkListManageButtonCell" destination="p1m-KY-Czx" id="m0V-Jq-XhL"/>
                         <outlet property="evernoteButtonCell" destination="2hx-Dl-0NY" id="xDg-qM-LGH"/>
                         <outlet property="iCloudButtonCell" destination="faE-YR-0Ub" id="TAC-Zd-PvT"/>
-                        <outlet property="inAppPurchaseButtonCell" destination="E3e-E7-5wJ" id="KAF-VE-k7L"/>
+                        <outlet property="inAppPurchaseButtonCell" destination="7H6-LL-uw5" id="sdr-vF-8DK"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nZK-fe-l0K" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -480,7 +484,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Evernoteに記録" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="u3T-Fu-1CH">
+                            <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Evernoteに記録" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="u3T-Fu-1CH">
                                 <rect key="frame" x="20" y="469" width="223" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -500,7 +504,7 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="aJM-vP-gZH">
+                            <switch hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" id="aJM-vP-gZH">
                                 <rect key="frame" x="251" y="464" width="51" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                             </switch>
