--- a/looplist/Base.lproj/Main_iPhone.storyboard
+++ b/looplist/Base.lproj/Main_iPhone.storyboard
@@ -542,6 +542,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="OZ3-mj-gae">
+                            <rect key="frame" x="0.0" y="130" width="320" height="92"/>
+                            <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="UXm-7D-PAt">
+                                    <rect key="frame" x="20" y="31" width="280" height="30"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" red="0.27450981740000002" green="0.43529415129999999" blue="0.27450981740000002" alpha="1" colorSpace="deviceRGB"/>
+                                    <state key="normal" title="Complete">
+                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    </state>
+                                    <connections>
+                                        <action selector="completeTouchUp:" destination="7Kl-bk-qc4" eventType="touchUpInside" id="fYr-Ka-U5Q"/>
+                                    </connections>
+                                </button>
+                            </subviews>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="fm2-IG-6gz">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
@@ -554,6 +573,10 @@
                         </prototypes>
                     </tableView>
                     <navigationItem key="navigationItem" title="Root View Controller" id="996-uG-2Yi"/>
+                    <connections>
+                        <outlet property="completeButton" destination="UXm-7D-PAt" id="3ew-Ga-zvh"/>
+                        <outlet property="footerView" destination="OZ3-mj-gae" id="QMI-gZ-K7a"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xgQ-bZ-GE6" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
